--- a/index.html
+++ b/index.html
@@ -12,19 +12,17 @@
         <div class="header">
             <nav class="nav">
                 <ul>
-                    <li>Lorem, ipsum.</li>
-                    <li>Lorem, ipsum.</li>
-                    <li>Lorem, ipsum.</li>
-                    <li>Lorem, ipsum.</li>
+                    <li><a href="#">Lorem, ipsum.</a></li>
+                    <li><a href="#">Lorem, ipsum.</a></li>
+                    <li><a href="#">Lorem, ipsum.</a></li>
                 </ul>
             </nav>
         </div>
         <div class="leftside">
             <ul>
-                <li>Lorem, ipsum.</li>
-                <li>Lorem, ipsum.</li>
-                <li>Lorem, ipsum.</li>
-                <li>Lorem, ipsum.</li>
+                <li><a href="#">Lorem, ipsum.</a></li>
+                <li><a href="#">Lorem, ipsum.</a></li>
+                <li><a href="#">Lorem, ipsum.</a></li>
             </ul>
         </div>
         <div class="main">
@@ -32,6 +30,18 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut obcaecati tempore facilis molestiae a porro accusamus, consequuntur quam culpa illum recusandae enim rem cupiditate ipsum fugit sit unde alias ut nam incidunt? Similique commodi in quo sint vitae! Vero numquam magni esse eius provident cum eligendi molestiae quas accusantium enim?</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut obcaecati tempore facilis molestiae a porro accusamus, consequuntur quam culpa illum recusandae enim rem cupiditate ipsum fugit sit unde alias ut nam incidunt? Similique commodi in quo sint vitae! Vero numquam magni esse eius provident cum eligendi molestiae quas accusantium enim?</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut obcaecati tempore facilis molestiae a porro accusamus, consequuntur quam culpa illum recusandae enim rem cupiditate ipsum fugit sit unde alias ut nam incidunt? Similique commodi in quo sint vitae! Vero numquam magni esse eius provident cum eligendi molestiae quas accusantium enim?</p>
+            <section class="sectionL">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, natus.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, natus.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, natus.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, natus.</p>
+            </section>
+            <section class="sectionR">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, natus.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, natus.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, natus.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, natus.</p>
+            </section>
         </div>
     </div>
 </body>
